--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,7 @@
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 150px;
+    margin-top: 4%;
 }
 .header img{
     border-radius: 50%;
@@ -28,7 +28,7 @@
 }
 @media(max-width:768px){
     .header img{
-        margin-top: 120px;
+        margin-top: 4%;
         width: 260px;
     }
     .header h1{
